--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -14,6 +14,10 @@ readme = "README.md"
 name = "distinst"
 path = "src/main.rs"
 
+[lib]
+name = "distinst_cli"
+path = "src/lib.rs"
+
 [dependencies]
 clap = "2.33.0"
 dbus = "0.8.2"
